--- a/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
+++ b/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/myStyle")
+    @Styles.Render("~/Content/myStylelayout")
     @Styles.Render("~/Content/jQueryUI")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/bootstrap-select")
@@ -44,7 +44,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jQueryUI")
-    @Scripts.Render("~/bundles/myScript")
+    @Scripts.Render("~/bundles/myScriptLayot")
     @Scripts.Render("~/bundles/dataTables")
     @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
     @Scripts.Render("~/bundles/dataTables")
