--- a/ClassLibrary1/PL/Views/Nav/TopMenu.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TopMenu.cshtml
@@ -17,7 +17,7 @@
     </div>
     <div class="tab-pane fade in active" id="tradeManagement">
         @Html.Partial("~/Views/Nav/TradeManagementTable.cshtml")
-        <div id="symbolNotFoundDialog">
+        <div id="symbolNotFoundDialog" style="display: none">
             Symbol was not found.
         </div>
     </div>
