--- a/ClassLibrary1/PL/Views/Position/Save.cshtml
+++ b/ClassLibrary1/PL/Views/Position/Save.cshtml
@@ -58,20 +58,21 @@
     @Html.HiddenFor(m => m.Gain);
     @Html.HiddenFor(m => m.AbsoluteGain);
     @Html.HiddenFor(m => m.MaxGain);
-   
-    <div class="form-group">
-        @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
-        @Html.TextBoxFor(a => a.Name, new { @class = "form-control" })
-        @Html.ValidationMessageFor(a => a.Name)
-    </div>
+    @Html.HiddenFor(m => m.SymbolId, new { id = "SymbolIdHidden" });
+
     <div class="form-group">
         @Html.LabelFor(m => m.SymbolName, new {@class = "col-md-2 control-label"})
         @Html.TextBoxFor(a => a.SymbolName, new
         {
             @class = "form-control", id = "input-symbol-search",
-            data_autocomplete_source = Url.Action("AutocompleteSymbolSearch", "Nav"), onChange = "completeInputData()"
+            data_autocomplete_source = Url.Action("AutocompleteSymbolSearch", "Nav"), onChange = "completeInputSymbolData()"
         })
         @Html.ValidationMessageFor(a => a.SymbolName)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label "})
+        @Html.TextBoxFor(a => a.Name, new { @class = "form-control", id = "TextBoxForSymbolName" })
+        @Html.ValidationMessageFor(a => a.Name)
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.TradeType, new { style = "margin-right: 15px;" })
@@ -85,7 +86,8 @@
     <div class="form-group">
         @Html.LabelFor(m => m.OpenDate, new {@class = "col-md-2 control-label myLabelFor"})
         <div class='input-group date' id='datetimepicker1' style="padding-right: 190px;">
-            @Html.TextBoxFor(a => a.OpenDate, new {@class = "form-control", style= "width: 241px;" })
+            @Html.TextBoxFor(a => a.OpenDate, new {@data_val = "false", id= "SymbolOpenDate",
+           @class = "form-control", style = "width: 241px;"})
             <span class="input-group-addon">
                 <span class="glyphicon glyphicon-calendar"></span>
             </span>
@@ -94,7 +96,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.OpenPrice, new { @class = "col-md-2 control-label myLabelFor"})
-        @Html.TextBoxFor(a => a.OpenPrice, new { @data_val = "false", @class = "form-control fucking-decimal-input", @readonly = true })
+        @Html.TextBoxFor(a => a.OpenPrice, new { id = "SymbolOpenPrice", data_val = "false", @class = "form-control fucking-decimal-input", @readonly = true })
         @Html.ValidationMessageFor(a => a.OpenPrice)
     </div>
     <div class="form-group">
@@ -117,7 +119,8 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.ClosePrice, new { @class = "col-md-2 control-label myLabelFor"})
-            @Html.TextBoxFor(a => a.ClosePrice, new { @data_val = "false", @class = "form-control fucking-decimal-input", @readonly = true })
+            @Html.TextBoxFor(a => a.ClosePrice, new {id= "SymbolClosePrice", @data_val = "false",
+           @class = "form-control fucking-decimal-input", @readonly = true })
             @Html.ValidationMessageFor(a => a.ClosePrice)
         </div>
     </div>
