some visual fix

--- a/ClassLibrary1/PL/Views/Nav/TopMenu.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TopMenu.cshtml
@@ -20,6 +20,9 @@
         <div id="symbolNotFoundDialog" style="display: none">
             Symbol was not found.
         </div>
+        <div id="alertErrorDialog" style="display: none">
+            <div id="errorDialogText"></div>
+        </div>
     </div>
     <div class="tab-pane fade in" id="viewManagement">Under construction...</div>
     <div class="tab-pane fade in" id="viewTemplateManagement">Under construction...</div>
