--- a/ClassLibrary1/PL/Content/myStyle/layout.css
+++ b/ClassLibrary1/PL/Content/myStyle/layout.css
@@ -125,3 +125,10 @@ input[type="checkbox"].input-validation-error {
 .ui-dialog .ui-dialog-buttonpane button {
         padding: 5px;
     }
+
+#Http404container{
+    color: white;
+    position: absolute;
+    bottom: 400px;
+    right: 200px;
+}
