--- a/ClassLibrary1/PL/Views/Home/Index.cshtml
+++ b/ClassLibrary1/PL/Views/Home/Index.cshtml
@@ -1,3 +1,12 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+
+<div class="row panel" style="margin: 10px;">
+    <div class="col-xs-2">
+        @Html.Action("LeftMenu", "Nav")
+    </div>
+    <div class="col-xs-10">
+        @Html.Partial("~/Views/Nav/TopMenu.cshtml")
+    </div>
+</div>
