--- a/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
+++ b/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
@@ -30,14 +30,8 @@
         </div>
     </div>
 </div>
-<div class="row panel" style="margin: 10px;">
-    <div class="col-xs-2">
-            @Html.Action("LeftMenu", "Nav")
-    </div>
-    <div class="col-xs-10">
-        @Html.Partial("~/Views/Nav/TopMenu.cshtml")
-        @RenderBody()
-    </div>
+<div id="contentDiv">
+    @RenderBody()
 </div>
 
     @Scripts.Render("~/bundles/jquery")
