--- a/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
+++ b/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jQueryUI")
     @Scripts.Render("~/bundles/myScriptLayot")
+    @Scripts.Render("~/bundles/myScriptTampleteManagement")
     @Scripts.Render("~/bundles/dataTables")
     @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
     @Scripts.Render("~/bundles/dataTables")
