Make CRUD for ViewTamplete

--- a/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
@@ -123,6 +123,8 @@
             <th>Close Price</th>
             <th>Close Date</th>
             <th>Gain</th>
+            <th>Last Update Date</th>
+            <th>Last Update Price</th>
             <th>Absolute Gain</th>
             <th>Max Gain</th>
         </tr>
