Make CRUD for View

--- a/ClassLibrary1/PL/Views/Nav/TopMenu.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TopMenu.cshtml
@@ -23,7 +23,9 @@
             <div id="errorDialogText"></div>
         </div>
     </div>
-    <div class="tab-pane fade in" id="viewManagement">Under construction...</div>
+    <div class="tab-pane fade in" id="viewManagement">
+        @Html.Partial("~/Views/Nav/ViewManagement.cshtml")
+    </div>
     <div class="tab-pane fade in" id="viewTemplateManagement">
         @Html.Partial("~/Views/Nav/ViewTemplateManagement.cshtml")
     </div>
