--- a/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
@@ -15,10 +15,10 @@
                     <li><a href="#">Add call option</a></li>*@
             </ul>
         </div>
-        <button type="button" class="btn btn-default myNavBtn">Trade Groups</button>
+        @*<button type="button" class="btn btn-default myNavBtn">Trade Groups</button>
         <button type="button" class="btn btn-default myNavBtn">Income</button>
         <button type="button" class="btn btn-default myNavBtn">Divide Trade</button>
-        <button type="button" class="btn btn-default myNavBtn">Custom Symbols</button>
+        <button type="button" class="btn btn-default myNavBtn">Custom Symbols</button>*@
         <div class="btn-group">
             <button type="button" class="btn btn-default dropdown-toggle myNavBtn" data-toggle="dropdown">
                 View <span class="caret"></span>
