--- a/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
+++ b/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
     @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.js")
     @Scripts.Render("~/bundles/bootstrap-select")
     @Scripts.Render("~/bundles/myScriptTampleteManagement")
+    @Scripts.Render("~/bundles/myScriptViewManagement")
     <script src="~/Scripts/moment.js"></script>
     <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
     @RenderSection("scripts", required: false)
