--- a/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
@@ -107,9 +107,9 @@
             </tbody>
         </table>
     </div>
-
+    <div id="tableDiv"></div>
     <table id="trade-management-jq-table" class="display" cellspacing="0" width="100%">
-        <thead>
+        @*<thead>
         <tr>
             <th></th>
             <th></th>
@@ -128,6 +128,6 @@
             <th>Absolute Gain</th>
             <th>Max Gain</th>
         </tr>
-        </thead>
+        </thead>*@
     </table>
 </div>
