--- a/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
@@ -94,27 +94,7 @@
             </tbody>
         </table>
     </div>
-    <div id="tableDiv"></div>
-    <table id="trade-management-jq-table" class="display" cellspacing="0" width="100%">
-        @*<thead>
-        <tr>
-            <th></th>
-            <th></th>
-            <th>Name</th>
-            <th>Symbol</th>
-            <th>Open Price</th>
-            <th>Open Date</th>
-            <th>Weight</th>
-            <th>Current Price</th>
-            <th>Status</th>
-            <th>Close Price</th>
-            <th>Close Date</th>
-            <th>Gain</th>
-            <th>Last Update Date</th>
-            <th>Last Update Price</th>
-            <th>Absolute Gain</th>
-            <th>Max Gain</th>
-        </tr>
-        </thead>*@
-    </table>
+    <div id="tableDiv">
+        <table id="trade-management-jq-table" class="display" cellspacing="0" width="100%"><tbody></tbody></table>
+    </div>
 </div>
