--- a/ClassLibrary1/PL/Views/Position/Save.cshtml
+++ b/ClassLibrary1/PL/Views/Position/Save.cshtml
@@ -13,42 +13,6 @@
     }
 </style>
 
-@{
-    #region
-    var tradeTypelist = new List<SelectListItem>
-            {
-                new SelectListItem
-                {
-                    Text = "Long",
-                    Value = "Long"
-                },
-                new SelectListItem
-                {
-                    Text = "Short",
-                    Value = "Short"
-                }
-            };
-    var TradeStatuslist = new List<SelectListItem>
-            {
-                new SelectListItem
-                {
-                    Text = "Open",
-                    Value = "Open"
-                },
-                new SelectListItem
-                {
-                    Text = "Close",
-                    Value = "Close"
-                },
-                new SelectListItem
-                {
-                    Text = "Wait",
-                    Value = "Wait"
-                }
-            };
-    #endregion
-}
-
 @using (Html.BeginForm("Save", "Position", FormMethod.Post, new { id = "popupForm" }))
 {
     @Html.AntiForgeryToken()
@@ -78,7 +42,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.TradeType, new { style = "margin-right: 15px;" })
-        @Html.DropDownListFor(model => model.TradeType, tradeTypelist, new { @class = "selectpicker", style = "width: 280px;" })
+        @Html.DropDownListFor(model => model.TradeType, ViewBag.TradeTypeList as SelectList, new { @class = "selectpicker", style = "width: 280px;" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.OpenWeight, new { @class = "col-md-2 control-label"})
@@ -103,7 +67,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(model => model.TradeStatus, new { style = "margin-right: 5px;" })
-        @Html.DropDownListFor(model => model.TradeStatus, TradeStatuslist, new
+        @Html.DropDownListFor(model => model.TradeStatus, ViewBag.TradeStatusList as SelectList, new
    {
        id= "TradeStatus", @class = "selectpicker", style = "width: 280px;", onchange = "tradeStatusCheck(this);"
    })
