finish view setting

--- a/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
@@ -81,7 +81,7 @@
                 <td class="td-item td-item-text">Position Status:</td>
                 <td style="padding-left: 10px;">
                     <select id="ddStatus" class="selectpicker">
-                        <option value="">All</option>
+                        <option value="All">All</option>
                         <option value="Open">Open Only</option>
                         <option value="Close">Close Only</option>
                         <option value="Wait">Open and Wait</option>
