--- a/ClassLibrary1/PL/Views/Admin/Index.cshtml
+++ b/ClassLibrary1/PL/Views/Admin/Index.cshtml
@@ -9,4 +9,5 @@
 
 @section scripts {
     @Scripts.Render("~/bundles/myScriptCustomerManagement")
+    @Scripts.Render("~/bundles/myScriptProfileManagement")
 }
