--- a/ClassLibrary1/PL/Views/Home/Index.cshtml
+++ b/ClassLibrary1/PL/Views/Home/Index.cshtml
@@ -10,3 +10,9 @@
         @Html.Partial("~/Views/Nav/TopMenu.cshtml")
     </div>
 </div>
+
+@section scripts {
+    @Scripts.Render("~/bundles/myScriptTampleteManagement")
+    @Scripts.Render("~/bundles/myScriptViewManagement")
+    @Scripts.Render("~/bundles/myScriptLayot")
+}
