--- a/ClassLibrary1/PL/Views/Admin/UserManagementTable.cshtml
+++ b/ClassLibrary1/PL/Views/Admin/UserManagementTable.cshtml
@@ -1,11 +1,9 @@
-﻿Under construction...
-
-@Styles.Render("~/Content/DataTables")
-<div class="userManagmentContainer">
+﻿@Styles.Render("~/Content/DataTables")
+<div class="profileManagmentContainer">
     <div style="margin: 10px;">
         <a href="/Profile/Save/0" class="popup btn btn-default myNavBtn">Add</a>
     </div>
-    <table id="user-management-jq-table" class="display" cellspacing="0" width="100%">
+    <table id="profile-management-jq-table" class="display" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th></th>
