--- a/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/TradeManagementTable.cshtml
@@ -29,7 +29,7 @@
                 <td>
                     <div style="margin-bottom: -15px; width: 150px; margin-left: 15px;">
                         <div class="form-group">
-                            <div class='input-group date' id='datetimepicker6'>
+                            <div class='input-group date' id='OpenDateFromDatetimepicker'>
                                 <input type='text' class="form-control" id="open-date-from" style="padding-right: 25px"/>
                                 <span class="input-group-addon">
                                         <span class="glyphicon glyphicon-calendar"></span>
@@ -42,7 +42,7 @@
                 <td>
                     <div style="margin-bottom: -15px; width: 150px; margin-left: 15px;">
                         <div class="form-group">
-                            <div class='input-group date' id='datetimepicker7'>
+                            <div class='input-group date' id='OpenDateToDatetimepicker'>
                                 <input type='text' class="form-control" id="open-date-to" style="padding-right: 25px"/>
                                 <span class="input-group-addon">
                                         <span class="glyphicon glyphicon-calendar"></span>
@@ -55,7 +55,7 @@
                 <td>
                     <div style="margin-bottom: -15px; width: 150px; margin-left: 15px;">
                         <div class="form-group">
-                            <div class='input-group date' id='datetimepicker8'>
+                            <div class='input-group date' id='CloseDateFromDatetimepicker'>
                                 <input type='text' class="form-control" id="close-date-from" style="padding-right: 25px"/>
                                 <span class="input-group-addon">
                                         <span class="glyphicon glyphicon-calendar"></span>
@@ -68,7 +68,7 @@
                 <td>
                     <div style="margin-bottom: -15px; width: 150px; margin-left: 15px;">
                         <div class="form-group">
-                            <div class='input-group date' id='datetimepicker9'>
+                            <div class='input-group date' id='CloseDateToDatetimepicker'>
                                 <input type='text' class="form-control" id="close-date-to" style="padding-right: 25px"/>
                                 <span class="input-group-addon">
                                         <span class="glyphicon glyphicon-calendar"></span>
