Make test for controllers

--- a/ClassLibrary1/PL/Views/Nav/ViewManagement.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/ViewManagement.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@Styles.Render("~/Content/DataTables")
+﻿@Styles.Render("~/Content/DataTables")
 <div class="viewContainer">
     <div style="margin: 10px;">
         <a href="/View/Save/0" class="popup btn btn-default myNavBtn">Add</a>
