--- a/ClassLibrary1/PL/Views/Nav/ViewTemplateManagement.cshtml
+++ b/ClassLibrary1/PL/Views/Nav/ViewTemplateManagement.cshtml
@@ -1,5 +1,4 @@
-﻿
-@Styles.Render("~/Content/DataTables")
+﻿@Styles.Render("~/Content/DataTables")
 <div class="tampleteTableContainer">
     <div style="margin: 10px;">
         <a href="/ViewTemplate/Save/0" class="popup btn btn-default myNavBtn">Add</a>
