--- a/ClassLibrary1/PL/Views/Position/ChartOfGain.cshtml
+++ b/ClassLibrary1/PL/Views/Position/ChartOfGain.cshtml
@@ -1,6 +1,36 @@
-﻿@model DotNet.Highcharts.Highcharts
+﻿
+@using Highsoft.Web.Mvc.Stocks
 
-
-<div>
-    @(Model)
-</div>
+@(Html.Highsoft().Highstock(
+        new Highstock
+        {
+            RangeSelector = new RangeSelector
+            {
+                Selected = 1
+            },
+            Title = new Title
+            {
+                Text = ViewData["Position"] + " Trade Information"
+            },
+            Series = new List<Series>
+            {
+                new LineSeries
+                {
+                    Data = ViewData["sybolData"] as List<LineSeriesData>,
+                    Name =  ViewData["Position"] as string,
+                    Tooltip = new LineSeriesTooltip
+                    {
+                        ValueDecimals = 2
+                    }
+                }
+            },
+            PlotOptions = new PlotOptions
+            {
+                Series = new PlotOptionsSeries
+                {
+                    TurboThreshold = 5000
+                }
+            }
+        },
+        "chart"
+      ))
