--- a/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
+++ b/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
     @Scripts.Render("~/bundles/bootstrap-select")
     <script src="~/Scripts/moment.js"></script>
     <script src="~/Scripts/bootstrap-datetimepicker.js"></script>
-    <script src="https://code.highcharts.com/highcharts.src.js"></script>
+    @Scripts.Render("~/bundles/highcharts")
     @RenderSection("scripts", required: false)
 </body>
 </html>
