--- a/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
+++ b/ClassLibrary1/PL/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title Trade Invest</title>
+    <title>@ViewBag.Title - Belarus Trade & Invest</title>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/myStylelayout")
     @Styles.Render("~/Content/jQueryUI")
