Added View for record log system

--- a/ClassLibrary1/PL/Views/Admin/Index.cshtml
+++ b/ClassLibrary1/PL/Views/Admin/Index.cshtml
@@ -10,4 +10,5 @@
 @section scripts {
     @Scripts.Render("~/bundles/myScriptCustomerManagement")
     @Scripts.Render("~/bundles/myScriptProfileManagement")
+    @Scripts.Render("~/bundles/myScriptRecordManagement")
 }
